--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 :root{
-font-family: 'Courier New', Courier, monospace;
+font-family: 'Robota', Courier, monospace;
 --blue: #388aaf; 
 }
 p{
@@ -17,12 +17,12 @@ grid-template-rows: 1fr 5fr;
 grid-column: 1/2;
 grid-row: 1/3;
 background-color: var(--blue);    
-font-size: 2rem;
+font-size: 1.5rem;
 font-weight: 800;
 color: white;
 }
 .header{
-background-color: wheat;
+background-color: burlywood;
 grid-column: 2/3;
 grid-row: 1/2;
 display: grid;
@@ -32,13 +32,14 @@ padding-left: 20px;
 
 }
 .content{
-background-color: brown;
+background-color: burlywood;
 grid-column: 2/3;
 grid-row: 2/3;
 
 }
 .logo{
     padding: 2rem;
+    font-size: 2rem;
 }
 .sidebar > ul {
     list-style: none;
@@ -80,14 +81,16 @@ grid-row: 2/3;
 .post-buttons > button{
     background-color: var(--blue);
     flex: 1;
-    height: 25px;
+    height: 35px;
     align-self: center;
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 15px;
     border: 0px;
+    color: white;
+    font-weight: 600;
+    font-size: 1rem;
 }
-
 
 .top-info{
     display: flex;
@@ -134,3 +137,103 @@ grid-row: 2/3;
     font-size: 25px;
 }
 
+.context{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 50px 1fr;
+    overflow-y: scroll;
+}
+.context::-webkit-scrollbar{
+    display: none;
+}
+.context > p{
+    background-color: burlywood;
+    font-size: 2rem;
+    padding-left: 20px;
+}
+
+.projects-grid{
+    background-color: burlywood;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+   
+}
+
+.symbols{
+    height: 2rem;
+    text-align: right;
+    white-space: nowrap;
+}
+.symbols > img{
+    height: 100%;
+    width: auto;
+    margin-right: 20px;
+}
+.article{
+    padding: 20px;
+    text-align: justify;
+    border-radius: 20px;
+    border-left: 10px yellow solid;
+    background-color: white;
+}
+.annoucements-grid{
+background-color: burlywood;
+}
+    .annoucements{
+        text-align: justify;
+        border-radius: 20px;
+        padding: 20px;
+        margin: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        background-color: white;
+    }
+    .annoucements > .p{
+        font-size: 0.8em;
+    }
+
+.h{
+    font-weight: 700;
+    font-size: 1.2em;
+    white-space: nowrap;
+}
+.trending{
+    font-size: 2rem;
+    padding-left: 20px;
+}
+
+.trending-grid{
+    display: grid;
+    background-color: white;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 20px;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1.5rem 1.5rem;
+}
+.person-image > img{
+height: 100%;
+width: auto;
+}
+.person-img{
+height: 120%;
+width: auto;
+grid-row: 1/3;
+grid-column: 1/2;
+}
+.person-name{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    white-space: nowrap;
+}
+.person-desc{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    white-space: nowrap;
+    font-size: 1.2em;
+    
+}
