--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ display: grid;
 grid-template-columns: 1fr 4fr;
 grid-template-rows: 1fr 5fr;
 }
+
 .sidebar{
 grid-column: 1/2;
 grid-row: 1/3;
@@ -20,9 +21,34 @@ background-color: var(--blue);
 font-size: 1.5rem;
 font-weight: 800;
 color: white;
+display: grid;
+grid-template-columns: 50px 1fr;
+grid-template-rows: 60px repeat(11,40px);
+gap: 10px;
+padding-left: 1rem;
+padding-top: 2rem;
+}
+.sidebar > img{
+align-self: center;
+color: white;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+}
+.sidebar > p{
+    align-self: center;
+    padding-left: 20px;
+}
+.empty{
+    grid-row: 2/3;
+    grid-column: 1/3;
+}
+.empty2{
+    grid-row: 9/10;
+    grid-column: 1/3;
 }
 .header{
-background-color: burlywood;
+background-color: white;
 grid-column: 2/3;
 grid-row: 1/2;
 display: grid;
@@ -32,14 +58,14 @@ padding-left: 20px;
 
 }
 .content{
-background-color: burlywood;
+
 grid-column: 2/3;
 grid-row: 2/3;
 
 }
 .logo{
-    padding: 2rem;
     font-size: 2rem;
+    align-self: center;
 }
 .sidebar > ul {
     list-style: none;
@@ -49,21 +75,26 @@ grid-row: 2/3;
 }
 .search{
     display: flex;
+    width: 100%;
 }
-.search-bar{
-    background-color: white;
+#search-bar{
+    background-color: rgba(128, 128, 128, 0.445);
     border-radius: 20px;
     flex: 1 1;
     margin-top:15px;
-    margin-bottom: 15px;
     margin-right: 40px;
     margin-left: 30px;
     min-width: 250px;
+    font-size: 2rem;
+    width: 100%;
 }
 
 .search-image{
     flex: 0 0 2rem;
     align-self: center;
+}
+.search-image>img{
+ align-self: center;
 }
 
 
@@ -140,27 +171,29 @@ grid-row: 2/3;
 .context{
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 50px 1fr;
+    grid-template-rows: 100px 1fr;
     overflow-y: scroll;
+
 }
 .context::-webkit-scrollbar{
     display: none;
 }
 .context > p{
-    background-color: burlywood;
+    background-color: rgba(214, 206, 196, 0.329);
     font-size: 2rem;
     padding-left: 20px;
+   padding-top:50px ;
 }
 
 .projects-grid{
-    background-color: burlywood;
+    padding-top: 50px;
+    background-color:rgba(214, 206, 196, 0.329);
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
-   
 }
 
 .symbols{
@@ -177,11 +210,11 @@ grid-row: 2/3;
     padding: 20px;
     text-align: justify;
     border-radius: 20px;
-    border-left: 10px yellow solid;
+    border-left: 10px rgb(255, 196, 0) solid;
     background-color: white;
 }
 .annoucements-grid{
-background-color: burlywood;
+background-color: rgba(214, 206, 196, 0.329);
 }
     .annoucements{
         text-align: justify;
@@ -237,3 +270,4 @@ grid-column: 1/2;
     font-size: 1.2em;
     
 }
+
