--- a/style.css
+++ b/style.css
@@ -85,8 +85,10 @@ grid-row: 2/3;
     margin-right: 40px;
     margin-left: 30px;
     min-width: 250px;
-    font-size: 2rem;
+    font-size: 1rem;
+    height: 2rem;
     width: 100%;
+    padding-left: 10px;
 }
 
 .search-image{
